# RANSAC-for-homography-on-GPU

./: .gitignore  README.md  references.md
Data/: data.xlsx  measurements_accuracy.xlsx
src/: CMakeLists.txt  Makefile  ORB.cpp  harris.cpp  homographyOpenCV.cpp  main.c  main.cpp
src/Inc/: Homography.hpp  HomographyParallel.hpp  RANSAC.hpp  Tools.hpp  main.hpp
src/Src/: Homography.cpp  HomographyParallel.cpp  HomographyParallelKernel.cl  RANSAC.cpp  Tools.cpp  eigenDLT.cpp  main.cpp
