cmake_minimum_required(VERSION 3.15)
project(ransacHomography)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
find_package (Eigen3 3.4 REQUIRED NO_MODULE)
find_package(OpenCL REQUIRED)

# SET(CMAKE_CXX_FLAGS  "-Ofast -march=native -fpic -ftree-vectorize")
include_directories(Inc Src Img)
file(GLOB_RECURSE SOURCES Src/*.cpp)
add_executable(ransacHomography ${SOURCES})
target_link_libraries(ransacHomography ${OpenCV_LIBS})
target_link_libraries (ransacHomography Eigen3::Eigen)
target_link_libraries(ransacHomography OpenCL::OpenCL)
